[package]
name = "operation-queue"
version = "0.1.0"
edition = "2024"
authors = ["Thunderbird Developers"]
description = "Helpers for synchronizing asynchronous protocol operations."
readme = "README.md"

[features]
line_token = []

[dependencies]
futures = "0.3.28"
oneshot = "0.1.11"
async-channel = "2.5.0"
log = "0.4.21"
thiserror = "1.0.56"
